# SciHubEVA

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
building/: build_linux.sh  build_macos.sh  build_windows.ps1  version_updater.py
building/Linux/usr/share/metainfo/: tech.leovan.SciHubEVA.appdata.xml
building/Windows/: SciHubEVA-x86_64.iss  SciHubEVA.win.version
building/macOS/: Info.plist
scihub_eva/api/: scihub_api.py
scihub_eva/globals/: versions.py
ui/: About.qml
